<resources>
    <string name="prompt">Your use of this extension is free of charge in exchange for safely using internet connection
        of your device\'s resources
    </string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="disclaimer">By clicking \"Agree\" you confirm your consent and agree to have read and accepted the
        terms
        of service of the SDK
    </string>
    <string name="resource_usage">We do not load your CPU, RAM and Internet connection bandwidth</string>
    <string name="hint_turn_off">You may turn this off from the settings menu</string>
    <string name="choose_your_usage_plan">Choose your usage plan</string>
    <string name="free">Free</string>
    <string name="hint_free">use the app and be a Peer</string>
    <string name="ads">Advertising</string>
    <string name="hint_ads">use the app with advertisements</string>
    <string name="subscription">Subscription</string>
    <string name="hint_subscription">use the app for an annual subscription</string>
    <string name="settings">Settings</string>
    <string name="dissable_battery_optimization">Please disable the battery optimization for this application in the
        phone settings
    </string>
</resources>
