<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context="net.monetizemyapp.android.PromptActivity">

    <TextView android:layout_width="0dp"
              android:layout_height="56dp"
              android:id="@+id/tvChoosePlan"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/choose_your_usage_plan"
              android:gravity="center"
              android:textColor="#000"
              android:textSize="18sp"
              android:background="#F8E7CD"
              app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/free"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tvChoosePlan"
            style="@style/ButtonSelected"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="40dp"
            android:id="@+id/btnFree"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/btnFree"
              android:elevation="6dp"
              app:layout_constraintEnd_toEndOf="@id/btnFree"
              app:layout_constraintTop_toTopOf="@id/btnFree"
              android:gravity="center"
              android:id="@+id/hintFree"
              style="@style/HintSelected"
              android:text="@string/hint_free"
              app:layout_constraintBottom_toBottomOf="@id/btnFree"/>

    <Button
            android:text="@string/ads"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnFree"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            style="@style/ButtonUnselected"
            android:id="@+id/btnAds"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"/>

    <TextView android:layout_width="0dp"
              android:id="@+id/hintAds"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/btnAds"
              android:elevation="6dp"
              app:layout_constraintEnd_toEndOf="@id/btnAds"
              app:layout_constraintTop_toTopOf="@id/btnAds"
              android:layout_marginTop="24dp"
              style="@style/HintUnselected"
              android:text="@string/hint_ads"
              app:layout_constraintBottom_toBottomOf="@id/btnAds"/>

    <Button
            android:text="@string/subscription"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/btnAds"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            style="@style/ButtonUnselected"
            android:id="@+id/btnSubscription"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/btnSubscription"
              android:id="@+id/hintSubscription"
              app:layout_constraintEnd_toEndOf="@id/btnSubscription"
              app:layout_constraintTop_toTopOf="@id/btnSubscription"
              style="@style/HintUnselected"
              android:text="@string/hint_subscription"
              app:layout_constraintBottom_toBottomOf="@id/btnSubscription"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="32dp"
            android:id="@+id/guidelineStart"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="32dp"
            android:id="@+id/guidelineEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>