<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context="net.monetizemyapp.android.PromptActivity">

    <View android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:alpha="0.6"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintDimensionRatio="16:5"
          android:id="@+id/header"
          android:background="@color/colorPrimary"/>

    <ImageView android:layout_width="80dp"
               android:layout_height="80dp"
               android:id="@+id/ivIcon"
               app:layout_constraintStart_toStartOf="@id/header"
               tools:src="@color/colorAccent"
               app:layout_constraintEnd_toEndOf="@id/header"
               app:layout_constraintTop_toTopOf="@id/header"
               app:layout_constraintBottom_toBottomOf="@id/header"/>

    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/guidelineStart"
              app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
              app:layout_constraintTop_toBottomOf="@id/header"
              android:gravity="center"
              android:textColor="#000"
              android:textSize="18sp"
              android:paddingTop="12dp"
              android:paddingBottom="16dp"
              android:id="@+id/prompt"
              android:text="@string/prompt"/>
    <Button
            android:text="@string/disagree"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-light"
            app:layout_constraintTop_toBottomOf="@id/prompt"
            app:layout_constraintEnd_toStartOf="@id/btnAgree"
            android:id="@+id/btnDisagree"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"/>

    <Button
            android:text="@string/agree"
            app:layout_constraintStart_toEndOf="@id/btnDisagree"
            android:layout_width="0dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/btnDisagree"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="64dp"
            android:id="@+id/btnAgree"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"/>

    <TextView android:layout_width="0dp"
              android:id="@+id/disclaimer" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/guidelineStart"
              app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
              android:text="@string/disclaimer"
              android:gravity="center"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/btnAgree"
    />

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/guidelineStart"
              app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
              android:id="@+id/tvResourceUsage"
              android:text="@string/resource_usage"
              android:gravity="center"
              android:textStyle="bold"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/disclaimer"/>

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/guidelineStart"
              app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
              android:text="@string/hint_turn_off"
              android:gravity="center"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/tvResourceUsage"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="32dp"
            android:id="@+id/guidelineStart"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="32dp"
            android:id="@+id/guidelineEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>
